MDL-68471 qtype_ddimageortext: Drop zones UI issues in Editing form
 - Drop zones overlap with other section
 - Drop zones do not have the correct size with the Preview window

--- a/question/type/ddimageortext/styles.css
+++ b/question/type/ddimageortext/styles.css
@@ -60,6 +60,7 @@ form.mform fieldset#id_previewareaheader .droppreview {
     position: absolute;
     cursor: move;
     z-index: 2;
+    white-space: nowrap;
 }
 
 .que.ddimageortext .dragitems.readonly .drag {
